SUBDIRS = \
	po \
	sym \
	sym-gnetman \
	sym-verilog \
	sym-vhdl \
	scheme

rcdatadir = $(LEPTONDATADIR)
dist_rcdata_DATA = \
	geda-system.conf \
	gschem-colormap-bw \
	gschem-colormap-darkbg \
	gschem-colormap-lightbg \
	lepton-gtkrc \
	lepton-system.conf \
	print-colormap-darkbg \
	print-colormap-lightbg \
	system-gafrc \
	system-gschemrc
